--- a/app/src/main/res/values/google_maps_api.xml
+++ b/app/src/main/res/values/google_maps_api.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">Please paste your API key here</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyApi7cU6ekBE6oU49uYcZXcPgquaKisbPw</string>
 </resources>
